--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
     <div class="container">
       <div class="currency">
         <select id="currency-one"></select>
-        <input class="input" type="number" id="amount-one" value="" />
+        <input
+          placeholder="Enter Amount"
+          class="input"
+          type="number"
+          id="amount-one"
+          value=""
+        />
       </div>
       <div class="swap-rate-container">
         <button class="swap" id="swap">
